2007-11-13  John W. Eaton  <jwe@octave.org>

	* configure.in: Only define HAVE_PCRE_H if <pcre.h> has the
	definitions we need.  Likewise for <pcre/pcre.h>.

2007-11-10  John W. Eaton  <jwe@octave.org>

	* configure.in: Delete AC_SUBST_FILE(f77_rules_frag).

2007-11-07  John W. Eaton  <jwe@octave.org>

	* configure.in: Also check for pcre/pcre.h.

2007-11-01  John W. Eaton  <jwe@octave.org>

	* configure.in: Delete BLAS library calling convention
	compatibility check.

2007-10-31  John W. Eaton  <jwe@octave.org>

	* README.binary-dist: Delete.

	* README.MachTen: Delete.
	* octMakefile.in (DISTFILES): Remove it from the list.

2007-10-30  David Bateman  <dbateman@free.fr>

	* examples/addtwomatrices.cc, examples/celldemo.cc,
	examples/firstmexdemo.c, examples/fortdemo.cc, examples/fortsub.f,
	examples/funcdemo.cc, examples/globaldemo.cc,
	examples/helloworld.cc, examples/mycell.c, examples/myfeval.c,
	examples/myfunc.c, examples/mypow2.c, examples/mysparse.c,
	examples/mystring.c, examples/mystruct.c, examples/paramdemo.cc,
	examples/stringdemo.cc, examples/structdemo.cc,
	examples/unwinddemo.cc: Doc fixes for small book format.

2007-10-26  Michael Goffioul  <michael.goffioul@gmail.com>

	* Makeconf.in: Remove UNSETCOMSPEC trick.

2007-10-25  John W. Eaton  <jwe@octave.org>

	* configure.in (AH_BOTTOM): Define OCTAVE_EMPTY_CPP_ARG here.

2007-10-24  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (maintainer-clean distclean): No need to delete
	Makefrag.f77 and Makerules.f77.
	* Makeconf.in: Include rules for making .o files from .f files
	instead of substituting @f77_rules_frag@.  
	* configure.in): Delete handling of --with-f2c and --with-f77
	options.  No need to call OCTAVE_CHECK_EXCLUSIVE_WITH_OPTIONS.
	Delete all special cases for f2c.
	* aclocal.m4 (OCTAVE_CHECK_EXCLUSIVE_WITH_OPTIONS): Delete macro.

	* FLEX.patch: Delete obsolete file.
	* octMakefile.in (DISTFILES): Remove it from the list.

	* acx_blas.m4: Use "-Wl,-framework -Wl,vecLib" instead of