@@ -1,3 +1,7 @@
+2007-11-13  Joseph P. Skudlarek  <Jskud@Jskud.com>
+
+	* DLD-FUNCTIONS/rand.cc (Frand): Update URL reference in doc string.
+
 2007-11-12  David Bateman  <dbateman@free.fr>
 
 	* graphics.h.in, graphics.cc (class text): Add the fontangle and
