@@ -1,3 +1,8 @@
+2007-11-13  Joseph P. Skudlarek  <Jskud@Jskud.com>
+
+	* octave-bug.in: Try mailx, then Mail, then /usr/ucb/mail, then
+	/bin/mail.
+ 
 2007-11-13  John W. Eaton  <jwe@octave.org>
 
 	* configure.in: Only define HAVE_PCRE_H if <pcre.h> has the
